6 level designed + treat system

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <canvas></canvas>
-    <div id="end"><span>Congratulation</span><button>Restart</button></div>
+    <div id="end"><span>GG WP</span><button>Restart</button></div>
   </body>
 </html>
