--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nyx's passage</title>
+    <title></title>
     <script type="module" src="/src/index.ts"></script>
     <link rel="stylesheet" href="./styles.css" />
   </head>
